--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ The goal of corgraph is to add a visual component that complements the `cor.test
 You can install the released version of corgraph from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
-install.packages("corgraph")
+devtools::install_github("https://github.com/BuggyBDrizzy/corgraph")
 ```
 
 ## Example
