--- a/README.Rmd
+++ b/README.Rmd
@@ -22,7 +22,7 @@ The goal of corgraph is to add a visual component that complements the `cor.test
 
 ## Installation
 
-You can install the released version of corgraph from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of corgraph from [github](https://github.com/BuggyBDrizzy/corgraph) with:
 
 ``` r
 devtools::install_github("https://github.com/BuggyBDrizzy/corgraph")
